day2-kubernetes/03-services-networking/service-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: task-api-service
spec:
  type: ClusterIP
  selector:
    app: task-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
