day2-kubernetes/03-services-networking/service-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: task-api-lb
spec:
  type: LoadBalancer
  selector:
    app: task-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
