day2-kubernetes/03-services-networking/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: task-api-nodeport
spec:
  type: NodePort
  selector:
    app: task-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080
